--- a/At uni/card practise/index.html
+++ b/At uni/card practise/index.html
@@ -18,6 +18,96 @@
             </div>
             <button class="button">Sebete at</button>
         </div>
+        <div class="card">
+            <div class="imgbox">
+                <img src="./this-image-shows-a-portrait-of-dragon-man-credit-chuang-zhao_web.webp" alt="Man">
+            </div>
+            <div class="texbox">
+                <h3>Cins: Neandertal</h3>
+                <span>Qiymet: 100 gold</span>
+            </div>
+            <button class="button">Sebete at</button>
+        </div>
+        <div class="card">
+            <div class="imgbox">
+                <img src="./this-image-shows-a-portrait-of-dragon-man-credit-chuang-zhao_web.webp" alt="Man">
+            </div>
+            <div class="texbox">
+                <h3>Cins: Neandertal</h3>
+                <span>Qiymet: 100 gold</span>
+            </div>
+            <button class="button">Sebete at</button>
+        </div>
+        <div class="card">
+            <div class="imgbox">
+                <img src="./this-image-shows-a-portrait-of-dragon-man-credit-chuang-zhao_web.webp" alt="Man">
+            </div>
+            <div class="texbox">
+                <h3>Cins: Neandertal</h3>
+                <span>Qiymet: 100 gold</span>
+            </div>
+            <button class="button">Sebete at</button>
+        </div>
+        <div class="card">
+            <div class="imgbox">
+                <img src="./this-image-shows-a-portrait-of-dragon-man-credit-chuang-zhao_web.webp" alt="Man">
+            </div>
+            <div class="texbox">
+                <h3>Cins: Neandertal</h3>
+                <span>Qiymet: 100 gold</span>
+            </div>
+            <button class="button">Sebete at</button>
+        </div>
+        <div class="card">
+            <div class="imgbox">
+                <img src="./this-image-shows-a-portrait-of-dragon-man-credit-chuang-zhao_web.webp" alt="Man">
+            </div>
+            <div class="texbox">
+                <h3>Cins: Neandertal</h3>
+                <span>Qiymet: 100 gold</span>
+            </div>
+            <button class="button">Sebete at</button>
+        </div>
+        <div class="card">
+            <div class="imgbox">
+                <img src="./this-image-shows-a-portrait-of-dragon-man-credit-chuang-zhao_web.webp" alt="Man">
+            </div>
+            <div class="texbox">
+                <h3>Cins: Neandertal</h3>
+                <span>Qiymet: 100 gold</span>
+            </div>
+            <button class="button">Sebete at</button>
+        </div>
+        <div class="card">
+            <div class="imgbox">
+                <img src="./this-image-shows-a-portrait-of-dragon-man-credit-chuang-zhao_web.webp" alt="Man">
+            </div>
+            <div class="texbox">
+                <h3>Cins: Neandertal</h3>
+                <span>Qiymet: 100 gold</span>
+            </div>
+            <button class="button">Sebete at</button>
+        </div>
+        <div class="card">
+            <div class="imgbox">
+                <img src="./this-image-shows-a-portrait-of-dragon-man-credit-chuang-zhao_web.webp" alt="Man">
+            </div>
+            <div class="texbox">
+                <h3>Cins: Neandertal</h3>
+                <span>Qiymet: 100 gold</span>
+            </div>
+            <button class="button">Sebete at</button>
+        </div>
+        <div class="card">
+            <div class="imgbox">
+                <img src="./this-image-shows-a-portrait-of-dragon-man-credit-chuang-zhao_web.webp" alt="Man">
+            </div>
+            <div class="texbox">
+                <h3>Cins: Neandertal</h3>
+                <span>Qiymet: 100 gold</span>
+            </div>
+            <button class="button">Sebete at</button>
+        </div>
     </div>
 </body>
 </html>
