send button changed

--- a/Homework/chat window hometask/index.html
+++ b/Homework/chat window hometask/index.html
@@ -40,7 +40,7 @@
             <input type="type_area" placeholder="Type a message..." />
           </div>
           <div class="send">
-            <span>Send</span>
+            <button>➤</button>
           </div>
         </div>
       </div>
