--- a/Homework/sass practise 2/index.html
+++ b/Homework/sass practise 2/index.html
@@ -49,7 +49,13 @@
           <div class="search">
             <i class="fa-solid fa-magnifying-glass"></i>
           </div>
+
         </div>
+
+        <div class="menu">
+          <i class="fa-solid fa-bars"></i>
+        </div>
+
       </div>
 
 
