fav button added

--- a/Homework/n11/index.html
+++ b/Homework/n11/index.html
@@ -301,6 +301,9 @@
                   src="https://n11scdn.akamaized.net/a1/226_226/08/94/91/34/IMG-2116289005114050481.jpg"
                   alt=""
                 />
+                <div class="favorite">
+                  <i class="fa-solid fa-heart"></i>
+                </div>
               </div>
 
               <div class="description">
@@ -338,6 +341,9 @@
                   src="https://n11scdn.akamaized.net/a1/216/01/05/52/35/IMG-6304529906598792680.jpg"
                   alt=""
                 />
+                <div class="favorite">
+                  <i class="fa-solid fa-heart"></i>
+                </div>
               </div>
 
               <div class="description">
@@ -372,6 +378,9 @@
                   src="https://n11scdn.akamaized.net/a1/216/05/85/52/99/IMG-3765350112207031513.jpg"
                   alt=""
                 />
+                <div class="favorite">
+                  <i class="fa-solid fa-heart"></i>
+                </div>
               </div>
 
               <div class="description">
@@ -406,6 +415,9 @@
                   src="https://n11scdn.akamaized.net/a1/216/07/16/61/74/IMG-738636492864425749.jpg"
                   alt=""
                 />
+                <div class="favorite">
+                  <i class="fa-solid fa-heart"></i>
+                </div>
               </div>
 
               <div class="description">
@@ -440,6 +452,9 @@
                   src="https://n11scdn.akamaized.net/a1/216/03/56/47/14/IMG-1612265331089455242.jpg"
                   alt=""
                 />
+                <div class="favorite">
+                  <i class="fa-solid fa-heart"></i>
+                </div>
               </div>
 
               <div class="description">
@@ -484,6 +499,9 @@
                   src="https://n11scdn.akamaized.net/a1/182_180/04/97/17/45/IMG-7291426916104708157.jpg"
                   alt=""
                 />
+                <div class="favorite">
+                  <i class="fa-solid fa-heart"></i>
+                </div>
               </div>
 
               <div class="description">
@@ -521,6 +539,9 @@
                   src="https://n11scdn.akamaized.net/a1/182_180/11/04/81/33/IMG-3546663807597089936.jpg"
                   alt=""
                 />
+                <div class="favorite">
+                  <i class="fa-solid fa-heart"></i>
+                </div>
               </div>
 
               <div class="description">
@@ -555,6 +576,9 @@
                   src="https://n11scdn.akamaized.net/a1/182_180/05/69/53/45/IMG-6368517031284222345.jpg"
                   alt=""
                 />
+                <div class="favorite">
+                  <i class="fa-solid fa-heart"></i>
+                </div>
               </div>
 
               <div class="description">
@@ -592,6 +616,9 @@
                   src="https://n11scdn.akamaized.net/a1/182_180/02/23/74/58/IMG-8717468181318525552.jpg"
                   alt=""
                 />
+                <div class="favorite">
+                  <i class="fa-solid fa-heart"></i>
+                </div>
               </div>
 
               <div class="description">
@@ -626,6 +653,9 @@
                   src="https://n11scdn.akamaized.net/a1/182_180/12/10/63/50/IMG-1686397732668384012.jpg"
                   alt=""
                 />
+                <div class="favorite">
+                  <i class="fa-solid fa-heart"></i>
+                </div>
               </div>
 
               <div class="description">
@@ -660,6 +690,9 @@
                   src="https://n11scdn.akamaized.net/a1/182_180/10/57/57/29/IMG-85443336741038221.jpg"
                   alt=""
                 />
+                <div class="favorite">
+                  <i class="fa-solid fa-heart"></i>
+                </div>
               </div>
 
               <div class="description">
@@ -702,6 +735,9 @@
                   src="https://n11scdn.akamaized.net/a1/226_226/09/95/48/53/IMG-1591764986356228408.jpg"
                   alt=""
                 />
+                <div class="favorite">
+                  <i class="fa-solid fa-heart"></i>
+                </div>
               </div>
 
               <div class="description">
@@ -736,6 +772,9 @@
                   src="https://n11scdn.akamaized.net/a1/226_226/06/74/15/93/IMG-6601965073706561540.jpg"
                   alt=""
                 />
+                <div class="favorite">
+                  <i class="fa-solid fa-heart"></i>
+                </div>
               </div>
 
               <div class="description">
@@ -773,6 +812,9 @@
                   src="https://n11scdn.akamaized.net/a1/226_226/14/23/69/93/IMG-563646386589914712.jpg"
                   alt=""
                 />
+                <div class="favorite">
+                  <i class="fa-solid fa-heart"></i>
+                </div>
               </div>
 
               <div class="description">
@@ -807,6 +849,9 @@
                   src="https://n11scdn.akamaized.net/a1/226_226/10/43/89/73/IMG-2726258881355643580.jpg"
                   alt=""
                 />
+                <div class="favorite">
+                  <i class="fa-solid fa-heart"></i>
+                </div>
               </div>
 
               <div class="description">
@@ -841,6 +886,9 @@
                   src="https://n11scdn.akamaized.net/a1/216/03/56/47/14/IMG-1612265331089455242.jpg"
                   alt=""
                 />
+                <div class="favorite">
+                  <i class="fa-solid fa-heart"></i>
+                </div>
               </div>
 
               <div class="description">
