--- a/Homework/n11/index.html
+++ b/Homework/n11/index.html
@@ -329,6 +329,7 @@
                 </div>
 
                 <div class="price">
+                  <span id="discount">870 TL</span>
                   <span>SEPETTE</span>
                   <ins>836.57 TL</ins>
                 </div>
@@ -366,6 +367,7 @@
                 </div>
 
                 <div class="price">
+                  <span id="discount">900 TL</span>
                   <span>SEPETTE</span>
                   <ins>874 TL</ins>
                 </div>
@@ -403,6 +405,7 @@
                 </div>
 
                 <div class="price">
+                  <span id="discount">3.200 TL</span>
                   <span>SEPETTE</span>
                   <ins>2.924 TL</ins>
                 </div>
@@ -440,6 +443,7 @@
                 </div>
 
                 <div class="price">
+                  <span id="discount">2.800 TL</span>
                   <span>SEPETTE</span>
                   <ins>2.600 TL</ins>
                 </div>
@@ -479,6 +483,7 @@
                 </div>
 
                 <div class="price">
+                  <span id="discount">1.673 TL</span>
                   <span>SEPETTE</span>
                   <ins>1.463 TL</ins>
                 </div>
@@ -527,6 +532,7 @@
                 </div>
 
                 <div class="price">
+                  <span id="discount">4.499 TL</span>
                   <span>SEPETTE</span>
                   <ins>4.199 TL</ins>
                 </div>
@@ -564,6 +570,7 @@
                 </div>
 
                 <div class="price">
+                  <span id="discount">2.599 TL</span>
                   <span>SEPETTE</span>
                   <ins>2.399 TL</ins>
                 </div>
@@ -604,6 +611,7 @@
                 </div>
 
                 <div class="price">
+                  <span id="discount">3.200 TL</span>
                   <span>SEPETTE</span>
                   <ins>3.011 TL</ins>
                 </div>
@@ -641,6 +649,7 @@
                 </div>
 
                 <div class="price">
+                  <span id="discount">249.99 TL</span>
                   <span>SEPETTE</span>
                   <ins>200 TL</ins>
                 </div>
@@ -678,6 +687,7 @@
                 </div>
 
                 <div class="price">
+                  <span id="discount">1.399 TL</span>
                   <span>SEPETTE</span>
                   <ins>1.294 TL</ins>
                 </div>
@@ -715,6 +725,7 @@
                 </div>
 
                 <div class="price">
+                  <span id="discount">479.99 TL</span>
                   <span>SEPETTE</span>
                   <ins>465.37 TL</ins>
                 </div>
@@ -760,6 +771,7 @@
                 </div>
 
                 <div class="price">
+                  <span id="discount">1.399 TL</span>
                   <span>SEPETTE</span>
                   <ins>1.241,50 TL</ins>
                 </div>
@@ -800,6 +812,7 @@
                 </div>
 
                 <div class="price">
+                  <span id="discount">1.499 TL</span>
                   <span>SEPETTE</span>
                   <ins>1.374 TL</ins>
                 </div>
@@ -837,6 +850,7 @@
                 </div>
 
                 <div class="price">
+                  <span id="discount">1.599 TL</span>
                   <span>SEPETTE</span>
                   <ins>2.490,63 TL</ins>
                 </div>
@@ -874,6 +888,7 @@
                 </div>
 
                 <div class="price">
+                  <span id="discount">699 TL</span>
                   <span>SEPETTE</span>
                   <ins>599 TL</ins>
                 </div>
@@ -913,6 +928,7 @@
                 </div>
 
                 <div class="price">
+                  <span id="discount">1.599 TL</span>
                   <span>SEPETTE</span>
                   <ins>1.463 TL</ins>
                 </div>
@@ -955,6 +971,7 @@
                     </div>
 
                     <div class="price">
+                      <span id="discount">21.999 TL</span>
                       <span>SEPETTE</span>
                       <ins>19.999 TL</ins>
                     </div>
@@ -992,6 +1009,7 @@
                     </div>
 
                     <div class="price">
+                      <span id="discount">28.999 TL</span>
                       <span>SEPETTE</span>
                       <ins>26.383 TL</ins>
                     </div>
@@ -1029,6 +1047,7 @@
                     </div>
 
                     <div class="price">
+                      <span id="discount">23.999 TL</span>
                       <span>SEPETTE</span>
                       <ins>21.799 TL</ins>
                     </div>
@@ -1110,6 +1129,7 @@
                     </div>
 
                     <div class="price">
+                      <span id="discount">4.699 TL</span>
                       <span>SEPETTE</span>
                       <ins>4.399 TL</ins>
                     </div>
@@ -1146,6 +1166,7 @@
                     </div>
 
                     <div class="price">
+                      <span id="discount">1.999 TL</span>
                       <span>SEPETTE</span>
                       <ins>1.799 TL</ins>
                     </div>
@@ -1183,6 +1204,7 @@
                     </div>
 
                     <div class="price">
+                      <span id="discount">22.899 TL</span>
                       <span>SEPETTE</span>
                       <ins>21.799 TL</ins>
                     </div>
